kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8spipeline
  labels:
    app: k8spipeline
spec:
  ports:
    - name: k8spipeline
      port: 8080
      targetPort: 8080
  selector:
    app: k8spipeline
