kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8spipeline
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #  tls:
  #    - hosts:
  #        - anthonycornell.com
  #      secretName: tls-secret
  rules:
    - host: a214b41a0e0514e2699db63fe5357379-bb5f5c88a96cfab5.elb.cn-northwest-1.amazonaws.com.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: k8spipeline
              servicePort: 8080
